--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <span>OWASP ZAP</span>
                         <span>Trivy</span>
                     </div>
-                    <a href="https://github.com" class="btn">View Project</a>
+                    <a href="https://github.com/wahajahmad-cyber/DevOps-mega-project-Banking-App" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
                     <h3>Multi-Environment Infrastructure as Code (IaC)</h3>
@@ -157,7 +157,7 @@
                         <span>Ansible</span>
                         <span>AWS</span>
                     </div>
-                    <a href="https://github.com" class="btn">View Project</a>
+                    <a href="https://github.com/wahajahmad-cyber/multi-env-lAC-project" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
                     <h3>EasyShop: Full-Stack E-commerce (CI/CD, Kubernetes)</h3>
@@ -169,7 +169,7 @@
                         <span>Argo CD</span>
                         <span>Terraform</span>
                     </div>
-                    <a href="https://github.com" class="btn">View Project</a>
+                    <a href="https://github.com/wahajahmad-cyber/tws-e-commerce-app" class="btn">View Project</a>
                 </div>
             </div>
         </div>
@@ -203,15 +203,15 @@
                     </div>
                     <div class="contact-method">
                         <i class="fas fa-phone"></i>
-                        <a href="tel:+923012529273">+92 301 2529273</a>
+                        <a href="tel:+92301-2529273">+92 301 2529273</a>
                     </div>
                     <div class="contact-method">
                         <i class="fab fa-linkedin"></i>
-                        <a href="https://linkedin.com/in/wahajahmed" target="_blank">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/wahaj-ahmed-ansari-00b5752b9" target="_blank">LinkedIn</a>
                     </div>
                     <div class="contact-method">
                         <i class="fab fa-github"></i>
-                        <a href="https://github.com/wahajahmed" target="_blank">GitHub</a>
+                        <a href="https://github.com/wahajahmad-cyber" target="_blank">GitHub</a>
                     </div>
                 </div>
             </div>
