Changes website content

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     </div>
                     <div class="contact-method">
                         <i class="fas fa-phone"></i>
-                        <a href="tel:+92301-2529273">+92 301 2529273</a>
+                        <a href="tel:+92301-2529273">+92 301-2529273</a>
                     </div>
                     <div class="contact-method">
                         <i class="fab fa-linkedin"></i>
