--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
                     <li><a href="#skills" class="nav-link">Skills</a></li>
                     <li><a href="#projects" class="nav-link">Projects</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
+                    <li><a href="Wahaj-Resume.pdf" class="nav-link resume-link" target="_blank">Resume</a></li>
                 </ul>
             </nav>
-            <button class="theme-toggle" aria-label="Toggle dark mode">
-                <i class="fas fa-moon"></i>
-            </button>
             <button class="mobile-menu-btn" aria-label="Toggle mobile menu">
                 <i class="fas fa-bars"></i>
             </button>
