Replaced skills rating bars with icon-based skill lists

--- a/index.html
+++ b/index.html
@@ -149,126 +149,60 @@
     <section id="skills" class="section">
         <div class="container">
             <h2>Skills</h2>
-            <div class="skills-container">
-                <div class="skill-category">
+            <div class="skills-grid">
+                <div class="skills-category">
                     <h3>Infrastructure & Cloud</h3>
-                    <div class="skill-progress">
-                        <div class="skill-header">
-                            <span class="skill-name">AWS</span>
-                            <span class="progress-percentage">90%</span>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-bar" data-progress="90"></div>
-                        </div>
-                    </div>
-                    <div class="skill-progress">
-                        <div class="skill-header">
-                            <span class="skill-name">Terraform</span>
-                            <span class="progress-percentage">85%</span>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-bar" data-progress="85"></div>
-                        </div>
-                    </div>
-                    <div class="skill-progress">
-                        <div class="skill-header">
-                            <span class="skill-name">Ansible</span>
-                            <span class="progress-percentage">80%</span>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-bar" data-progress="80"></div>
-                        </div>
-                    </div>
+                    <ul class="skills-list">
+                        <li><i class="fab fa-aws"></i> Amazon Web Services (EC2, S3, VPC, IAM, EKS)</li>
+                        <li><i class="fas fa-cubes"></i> Terraform</li>
+                        <li><i class="fas fa-cogs"></i> Ansible</li>
+                        <li><i class="fas fa-cloud"></i> CloudFormation</li>
+                    </ul>
                 </div>
-                <div class="skill-category">
+                <div class="skills-category">
                     <h3>Containerization & Orchestration</h3>
-                    <div class="skill-progress">
-                        <div class="skill-header">
-                            <span class="skill-name">Docker</span>
-                            <span class="progress-percentage">95%</span>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-bar" data-progress="95"></div>
-                        </div>
-                    </div>
-                    <div class="skill-progress">
-                        <div class="skill-header">
-                            <span class="skill-name">Kubernetes</span>
-                            <span class="progress-percentage">85%</span>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-bar" data-progress="85"></div>
-                        </div>
-                    </div>
-                    <div class="skill-progress">
-                        <div class="skill-header">
-                            <span class="skill-name">Argo CD</span>
-                            <span class="progress-percentage">75%</span>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-bar" data-progress="75"></div>
-                        </div>
-                    </div>
+                    <ul class="skills-list">
+                        <li><i class="fab fa-docker"></i> Docker</li>
+                        <li><i class="fas fa-dharmachakra"></i> Kubernetes</li>
+                        <li><i class="fas fa-code-branch"></i> Argo CD</li>
+                        <li><i class="fas fa-server"></i> Container Registry</li>
+                    </ul>
                 </div>
-                <div class="skill-category">
+                <div class="skills-category">
                     <h3>CI/CD & Automation</h3>
-                    <div class="skill-progress">
-                        <div class="skill-header">
-                            <span class="skill-name">Jenkins</span>
-                            <span class="progress-percentage">90%</span>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-bar" data-progress="90"></div>
-                        </div>
-                    </div>
-                    <div class="skill-progress">
-                        <div class="skill-header">
-                            <span class="skill-name">GitHub Actions</span>
-                            <span class="progress-percentage">85%</span>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-bar" data-progress="85"></div>
-                        </div>
-                    </div>
-                    <div class="skill-progress">
-                        <div class="skill-header">
-                            <span class="skill-name">Shell Scripting</span>
-                            <span class="progress-percentage">80%</span>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-bar" data-progress="80"></div>
-                        </div>
-                    </div>
+                    <ul class="skills-list">
+                        <li><i class="fab fa-jenkins"></i> Jenkins</li>
+                        <li><i class="fab fa-github"></i> GitHub Actions</li>
+                        <li><i class="fas fa-terminal"></i> Shell Scripting</li>
+                        <li><i class="fas fa-code"></i> YAML/JSON</li>
+                    </ul>
                 </div>
-                <div class="skill-category">
+                <div class="skills-category">
                     <h3>Monitoring & Observability</h3>
-                    <div class="skill-progress">
-                        <div class="skill-header">
-                            <span class="skill-name">Prometheus</span>
-                            <span class="progress-percentage">85%</span>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-bar" data-progress="85"></div>
-                        </div>
-                    </div>
-                    <div class="skill-progress">
-                        <div class="skill-header">
-                            <span class="skill-name">Grafana</span>
-                            <span class="progress-percentage">80%</span>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-bar" data-progress="80"></div>
-                        </div>
-                    </div>
-                    <div class="skill-progress">
-                        <div class="skill-header">
-                            <span class="skill-name">ELK Stack</span>
-                            <span class="progress-percentage">75%</span>
-                        </div>
-                        <div class="progress-container">
-                            <div class="progress-bar" data-progress="75"></div>
-                        </div>
-                    </div>
+                    <ul class="skills-list">
+                        <li><i class="fas fa-chart-line"></i> Prometheus</li>
+                        <li><i class="fas fa-tachometer-alt"></i> Grafana</li>
+                        <li><i class="fas fa-search"></i> ELK Stack</li>
+                        <li><i class="fas fa-bell"></i> Alerting Systems</li>
+                    </ul>
+                </div>
+                <div class="skills-category">
+                    <h3>Security & Compliance</h3>
+                    <ul class="skills-list">
+                        <li><i class="fas fa-shield-alt"></i> OWASP ZAP</li>
+                        <li><i class="fas fa-lock"></i> Trivy</li>
+                        <li><i class="fas fa-user-shield"></i> AWS Security Groups</li>
+                        <li><i class="fas fa-key"></i> HashiCorp Vault</li>
+                    </ul>
+                </div>
+                <div class="skills-category">
+                    <h3>Programming & OS</h3>
+                    <ul class="skills-list">
+                        <li><i class="fab fa-python"></i> Python</li>
+                        <li><i class="fas fa-terminal"></i> Bash</li>
+                        <li><i class="fab fa-linux"></i> Linux (Ubuntu, RHEL)</li>
+                        <li><i class="fas fa-code"></i> Git Version Control</li>
+                    </ul>
                 </div>
             </div>
         </div>
