--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wahaj Ahmed | DevOps Engineer</title>
+    <title>Wahaj Ahmed Ansari | DevOps Engineer</title>
     <meta name="description" content="DevOps Engineer specializing in CI/CD automation, Infrastructure as Code, and cloud technologies">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
