Updated all instances of name to full name 'Wahaj Ahmed Ansari'

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1 class="animate-on-load">Wahaj Ahmed</h1>
+                    <h1 class="animate-on-load">Wahaj Ahmed Ansari</h1>
                     <h2 class="animate-on-load delay-1">DevOps Engineer</h2>
                     <p class="animate-on-load delay-2">Automating infrastructure, optimizing deployments, and building scalable cloud solutions.</p>
                     <div class="hero-cta animate-on-load delay-3">
@@ -472,7 +472,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h3>Wahaj Ahmed</h3>
+                    <h3>Wahaj Ahmed Ansari</h3>
                     <p>DevOps Engineer</p>
                 </div>
                 <div class="footer-links">
@@ -504,7 +504,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Wahaj Ahmed. All rights reserved.</p>
+                <p>&copy; 2025 Wahaj Ahmed Ansari. All rights reserved.</p>
             </div>
         </div>
     </footer>
