--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                         <li><a href="#skills" class="nav-link">Skills</a></li>
                         <li><a href="#contact" class="nav-link">Contact</a></li>
                         <li><a href="Wahaj-Resume.pdf" class="nav-link btn-resume" target="_blank">Resume</a></li>
+                        <li><button class="theme-toggle" id="theme-toggle" aria-label="Toggle theme">
+                            <i class="fas fa-sun" id="theme-icon"></i>
+                        </button></li>
                     </ul>
                 </div>
                 <div class="hamburger">
