Fix dark mode default theme
- Set data-theme='dark' attribute on body by default
- Reorganized CSS variables to make dark mode the true default
- Added immediate theme initialization script to prevent flash
- Fixed header background for proper dark mode display
- Ensured theme persistence and proper switching

--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script>
+        // Apply theme immediately to prevent flash
+        (function() {
+            const savedTheme = localStorage.getItem('theme') || 'dark';
+            document.documentElement.setAttribute('data-theme', savedTheme);
+            document.body.setAttribute('data-theme', savedTheme);
+        })();
+    </script>
 </head>
-<body>
+<body data-theme="dark">
     <!-- Header -->
     <header class="header">
         <div class="container">
