Add large profile photo section on right side of hero
- Updated hero section to two-column grid layout
- Added large 400px circular profile photo on the right side
- Created placeholder for profile photo with instructions
- Added hover effects and modern styling for profile photo
- Improved button designs with better spacing and effects
- Added responsive design for mobile devices
- Enhanced social media icons with hover animations
- Balanced layout inspired by modern portfolio designs

--- a/index.html
+++ b/index.html
@@ -42,18 +42,36 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1 class="animate-on-load">Wahaj Ahmed Ansari</h1>
+                    <div class="greeting">👋 Hello, I'm</div>
+                    <h1 class="animate-on-load">Wahaj Ahmed</h1>
                     <h2 class="animate-on-load delay-1">DevOps Engineer</h2>
-                    <p class="animate-on-load delay-2">Automating infrastructure, optimizing deployments, and building scalable cloud solutions.</p>
+                    <p class="subtitle animate-on-load delay-2">I specialize in automating infrastructure, optimizing CI/CD pipelines, and building scalable cloud solutions that help teams deploy faster and more reliably.</p>
                     <div class="hero-cta animate-on-load delay-3">
-                        <a href="#projects" class="btn btn-primary">View Projects</a>
-                        <a href="#contact" class="btn btn-secondary">Contact Me</a>
+                        <a href="#projects" class="btn btn-primary">
+                            <span>View My Work</span>
+                            <i class="fas fa-arrow-right"></i>
+                        </a>
+                        <a href="#contact" class="btn btn-secondary">
+                            <span>Get In Touch</span>
+                        </a>
+                    </div>
+                    <div class="hero-social animate-on-load delay-4">
+                        <a href="https://www.linkedin.com/in/wahaj-ahmed-ansari-00b5752b9" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/wahajahmad-cyber" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                        <a href="mailto:wahajahmed263@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
-                <div class="hero-social animate-on-load delay-4">
-                    <a href="https://www.linkedin.com/in/wahaj-ahmed-ansari-00b5752b9" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/wahajahmad-cyber" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                    <a href="mailto:wahajahmed263@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
+                <div class="hero-image animate-on-load delay-2">
+                    <div class="profile-photo">
+                        <div class="photo-placeholder">
+                            <i class="fas fa-user"></i>
+                            <p>Add your photo here</p>
+                            <small>Replace with: assets/images/profile.jpg</small>
+                        </div>
+                        <!-- Uncomment when you add your photo:
+                        <img src="assets/images/profile.jpg" alt="Wahaj Ahmed - DevOps Engineer" />
+                        -->
+                    </div>
                 </div>
             </div>
         </div>
