Implement requested layout changes inspired by friend's website
- Added social media icons to top navigation (LinkedIn, GitHub, Discord, Instagram)
- Removed Resume link from navigation menu
- Changed 'View My Work' button to 'Download Resume' with download icon
- Removed entire contact info section from About Me page
- Updated About section to single column layout (no more two-column)
- Added modern styling for social media icons in navigation
- Responsive design for social icons on mobile devices
- Clean, focused About Me section without contact details

--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
                         <li><a href="#projects" class="nav-link">Projects</a></li>
                         <li><a href="#skills" class="nav-link">Skills</a></li>
                         <li><a href="#contact" class="nav-link">Contact</a></li>
-                        <li><a href="Wahaj-Resume.pdf" class="nav-link btn-resume" target="_blank">Resume</a></li>
+                        <li class="social-nav">
+                            <a href="https://www.linkedin.com/in/wahaj-ahmed-ansari-00b5752b9" target="_blank" aria-label="LinkedIn" class="social-link">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="https://github.com/wahajahmad-cyber" target="_blank" aria-label="GitHub" class="social-link">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="#" target="_blank" aria-label="Discord" class="social-link">
+                                <i class="fab fa-discord"></i>
+                            </a>
+                            <a href="#" target="_blank" aria-label="Instagram" class="social-link">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="hamburger">
@@ -47,9 +60,9 @@
                     <h2 class="animate-on-load delay-1">DevOps Engineer</h2>
                     <p class="subtitle animate-on-load delay-2">I specialize in automating infrastructure, optimizing CI/CD pipelines, and building scalable cloud solutions that help teams deploy faster and more reliably.</p>
                     <div class="hero-cta animate-on-load delay-3">
-                        <a href="#projects" class="btn btn-primary">
-                            <span>View My Work</span>
-                            <i class="fas fa-arrow-right"></i>
+                        <a href="Wahaj-Resume.pdf" class="btn btn-primary" target="_blank">
+                            <span>Download Resume</span>
+                            <i class="fas fa-download"></i>
                         </a>
                         <a href="#contact" class="btn btn-secondary">
                             <span>Get In Touch</span>
@@ -109,48 +122,6 @@
                                 <h3>60%</h3>
                                 <p>Faster Provisioning</p>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="about-contact">
-                    <div class="contact-item">
-                        <div class="contact-icon">
-                            <i class="fas fa-map-marker-alt"></i>
-                        </div>
-                        <div class="contact-text">
-                            <p>Karachi, Pakistan</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">
-                            <i class="fas fa-envelope"></i>
-                        </div>
-                        <div class="contact-text">
-                            <p><a href="mailto:wahajahmed263@gmail.com">wahajahmed263@gmail.com</a></p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">
-                            <i class="fas fa-phone"></i>
-                        </div>
-                        <div class="contact-text">
-                            <p><a href="tel:+923012529273">+92 301-2529273</a></p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">
-                            <i class="fab fa-linkedin"></i>
-                        </div>
-                        <div class="contact-text">
-                            <p><a href="https://www.linkedin.com/in/wahaj-ahmed-ansari-00b5752b9" target="_blank">LinkedIn</a></p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">
-                            <i class="fab fa-github"></i>
-                        </div>
-                        <div class="contact-text">
-                            <p><a href="https://github.com/wahajahmad-cyber" target="_blank">GitHub</a></p>
                         </div>
                     </div>
                 </div>
