Added Social Links

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                             <a href="https://github.com/wahajahmad-cyber" target="_blank" aria-label="GitHub" class="social-link">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" target="_blank" aria-label="Discord" class="social-link">
+                            <a href="https://discord.com/channels/@me/1387827780435054653" target="_blank" aria-label="Discord" class="social-link">
                                 <i class="fab fa-discord"></i>
                             </a>
-                            <a href="#" target="_blank" aria-label="Instagram" class="social-link">
+                            <a href="https://www.instagram.com/meetwahaj?igsh=MTRhczMwOGx3dmpidQ==" target="_blank" aria-label="Instagram" class="social-link">
                                 <i class="fab fa-instagram"></i>
                             </a>
                         </li>
