--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/wahaj2.png" />
+  <link rel="icon" type="image/png" href="/W.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Suraj :) </title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
